--- a/src/pages/main-page/main-page.module.css
+++ b/src/pages/main-page/main-page.module.css
@@ -1,5 +1,9 @@
-.main-page {
+.main_page {
     padding: 20px;
+}
+
+.title {
+    margin: 0;
 }
 
 h1 {
@@ -8,15 +12,15 @@ h1 {
 
 .description {
     font: var(--font-md);
-    color: var(--secondary-color);
+    margin: 5px 0 10px;
 }
 
-.task-list {
+.task_list {
     list-style-type: none;
     padding: 0;
 }
 
-.task-item {
+.task_item {
     border: 1px solid #ccc;
     border-radius: 8px;
     padding: 20px;
@@ -24,11 +28,11 @@ h1 {
     transition: box-shadow 0.3s ease;
 }
 
-.task-item:hover {
+.task_item:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.task-item h2 {
+.task_item h2 {
     margin-top: 0;
 }
 
@@ -38,14 +42,3 @@ h1 {
     flex-direction: column;
 }
 
-.view-button {
-    background-color: #007bff;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-}
-
-.view-button:hover {
-    background-color: #0056b3;
-}
