--- a/src/shared/ui/link/link.module.css
+++ b/src/shared/ui/link/link.module.css
@@ -1,3 +1,9 @@
 .link {
-    color: var(--primary)
+    color: var(--color-black);
+    width: max-content;
+    transition: all ease-in-out 0.2s;
+}
+
+.link:hover {
+    opacity: .5;
 }
