feat адаптив для таск 1

--- a/src/pages/task-1-html-css/_components/user-profile/user-profile.module.css
+++ b/src/pages/task-1-html-css/_components/user-profile/user-profile.module.css
@@ -12,3 +12,17 @@
 .user_biography {
     flex-basis: 66%;
 }
+
+@media screen and (max-width: 768px) {
+    .user_info {
+        flex-direction: column;
+    }
+
+    .user_contacts {
+        width: 100%;
+    }
+
+    .user_biography {
+        width: 100%;
+    }
+}
