--- a/src/shared/ui/page/page.module.css
+++ b/src/shared/ui/page/page.module.css
@@ -1,8 +1,13 @@
 .page {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 10px;
+    padding: 5px 10px;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+
+.center {
+    align-items: center;
+    justify-content: center;
 }
